# augmented-semantics

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  new-ideas.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.json
.claude/hooks/: pre-commit.sh
.github/workflows/: ci.yml  deploy-skos.yml  tauri-build.yml  tauri-rdf.yml
ae-rdf/: CLAUDE.md  CODE_REVIEW.md  PLAN.md  PONYTAIL-DEBT.md  RELEASE.md  index.html  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
ae-rdf/analysis/: ENDPOINTS.md  curate-all.ts  merge.ts
ae-rdf/scripts/: bundle-app-config.mjs  bundle-era-config.mjs  gen-prefixes.mjs  group-types.mjs  profile-endpoint.ts  profile-properties.ts
ae-rdf/src/: App.vue  App.vue.js  env.d.ts  main.js  main.ts  style.css
ae-rdf/src-tauri/: Cargo.toml  tauri.conf.json  tauri.cordis.conf.json
ae-rdf/src-tauri/capabilities/: default.json
ae-rdf/src-tauri/icons/: icon.icns
ae-rdf/src-tauri/src/: lib.rs
ae-skos/: .gitignore  DEPLOYMENT.md  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
ae-skos/codex/: collection-logic-analysis.md  orphan-detection-analysis.md
ae-skos/curation/: ENDPOINTS.md  curate-all.ts  merge.ts
ae-skos/scripts/: prebuild-endpoints.ts
ae-skos/src/: App.vue  env.d.ts  main.ts  style.css
ae-skos/src-tauri/: Cargo.toml  tauri.conf.json
docs/: downloads.md  index.md
endpoint-profiler/: .gitignore  analyze-all.ts  inheritance.ts  merge.ts  owl-shacl.ts  package.json  prefix-map.json
spec/: ideas.md  new-design.html  new-ideas.md  overview.md
(+425 files in other folders)
